Bug 413183 - Ugly and incorrect monochrome icon used to indicate that a KCM needs auth
Summary: Ugly and incorrect monochrome icon used to indicate that a KCM needs auth
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: iconview (other bugs)
Version First Reported In: 5.17.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-19 11:34 UTC by James Th
Modified: 2019-11-05 10:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.3
Sentry Crash Report:


Attachments
SDDM System Setting confusing icon (10.42 KB, image/png)
2019-10-19 11:34 UTC, James Th
Details
exclamation-mark-overlay on breeze icon theme (19.46 KB, image/png)
2019-10-19 15:48 UTC, Paul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Th 2019-10-19 11:34:56 UTC
Created attachment 123336 [details]
SDDM System Setting confusing icon

SUMMARY
Apologies in advance, I'm not sure which application this is so I'm probably logging this to the wrong place!

Please see the attached screenshot, which shows System Settings -> Start Up and Shutdown option -> Login Screen (SDDM).  It has an exclamation mark in the bottom corner.  To me this says that there's something wrong in my SDDM start up and shutdown settings, but when I look there I can't see anything wrong! So either:
1) we need another exclamation mark within the settings tabs to hi-light where the issue is, *or*
2) The icon needs to be adapted to not show the exclamation mark, i.e. it's a false report.

STEPS TO REPRODUCE
1. open up System Settings -> Start Up and Shutdown option, and see if the exclamation mark is there. If it is, then try to find a corresponding issue within the settings screen.


OBSERVED RESULT
As above

EXPECTED RESULT
either:
1) we need another exclamation mark within the settings, to hi-light where the issue is, *or*
2) The logo needs to be adapted to not show the exclamation mark, ie it's a false report.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: OpenSUSE TW  20191016
(available in About System)
KDE Plasma Version: 5.17
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-10-19 14:25:11 UTC
That's not a KDE icon; it comes from your icon theme. Please report this to the theme's author. Thanks!
Comment 2 Paul 2019-10-19 15:48:04 UTC
Created attachment 123341 [details]
exclamation-mark-overlay on breeze icon theme

@nate

Out of curiosity I just checked on a system using the standard Breeze icon theme (breeze5-icons 5.63.0-1.1)

Also appear to have an exclamation mark overlay.

Operating System: openSUSE Tumbleweed 20191016
KDE Plasma Version: 5.17.0
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

I'll add that I'm not using SDDM as my display manager, could that be the reason perhaps for the exclamation mark.
Comment 3 Björn Feber 2019-10-19 17:00:33 UTC
Can confirm.
Comment 4 Nate Graham 2019-10-20 14:28:40 UTC
Ah, that makes way more sense. We should display in the KCM itself when it can't be used because SDDM isn't installed.
Comment 5 Filip Fila 2019-11-04 23:14:26 UTC
This only happens in *icon view* and even if using SDDM as the login manager.

The same thing affects the KDE Wallet icon.

The question is is it simply a bug in system setttings' icon view or is it actually detecting some error with these KCMs.

I've grepped systemsettings for the icon that shows up and I get this in ModuleView.cpp:

    if( moduleProxy && moduleProxy->realModule()->useRootOnlyMessage() ) {
        page->setHeader( moduleInfo->moduleName() + QStringLiteral("<br><small>") + moduleProxy->realModule()->rootOnlyMessage() + QStringLiteral("</small>") );
        page->setIcon( KDE::icon( moduleInfo->icon(), QStringList() << QStringLiteral("dialog-warning") ) );
    }
Comment 6 Filip Fila 2019-11-04 23:36:28 UTC
See patch for explanation of the cause: https://phabricator.kde.org/D25150
Comment 7 Filip Fila 2019-11-05 10:54:44 UTC
Git commit efb35162be7f21f28d0c293fb0c024d9ad9c0f90 by Filip Fila.
Committed on 05/11/2019 at 10:54.
Pushed by filipf into branch 'Plasma/5.17'.

[Icon View] Don't use dialog-warning emblem on icon when KCM requires authentication

Summary:
Icon view currently sets a dialog-warning emblem on the sidebar icons for KCMs that require root authentication (SDDM, KDE Wallet).

This overlay is both confusing and unnecessary given that we already spell it out in big letters in the KCM header that we'll be asking for authentication.

This patch removes the icon overlay.

Test Plan:
Before:
{F7737211}

After:
{F7737213}

Reviewers: #vdg, ngraham, ndavis

Reviewed By: #vdg, ngraham, ndavis

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25150

M  +0    -1    core/ModuleView.cpp

https://commits.kde.org/systemsettings/efb35162be7f21f28d0c293fb0c024d9ad9c0f90